--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+spring.datasource.url= jdbc:mysql://35.190.163.249:3306/testdev
+spring.datasource.username= flixbee
+spring.datasource.password= totototo
+server.port=9000
 
+logging.level.org.springframework.security = debug
+server.servlet.context-path= /api
+spring.jpa.database-platform= org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto= update
+spring.jackson.serialization.fail-on-empty-beans=false
+
+spring.cloud.gcp.sql.instance-connection-name=springboot-352315:us-east1:flixbee2
+spring.cloud.gcp.sql.database-name=dev
+spring.cloud.gcp.logging.enabled=true
